<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:baselineAligned="false"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
   	
	<TextView
	    android:id="@+id/txtSaudacao"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dp"
	    android:textSize="20sp"
        android:gravity="center" />
	
	<Button
	    android:id="@+id/btConectar"
	    android:width="240dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/txtSaudacao"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="100dp"
	    android:text="@string/btConectar"
	    android:onClick="conectarLeitor" />
	
	<Button
	    android:id="@+id/btLog"
	    android:width="240dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/btConectar"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="20dp"
	    android:text="@string/btLog" />
	
	<Button
	    android:id="@+id/btSobre"
	    android:width="240dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/btLog"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="20dp"
	    android:text="@string/btSobre" />
	
	<Button
	    android:id="@+id/btSair"
	    android:width="240dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/btSobre"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="20dp"
	    android:text="@string/btSair"
	    android:onClick="sairApp" />
	    
</RelativeLayout>